*SVN*

* Base#to_xml supports the nil="true" attribute like Hash#to_xml.  #8268 [Catfish]

* Change plings to the more conventional quotes in the documentation. Closes #10104 [danger]

* Fix HasManyThrough Association so it uses :conditions on the HasMany Association.  Closes #9729 [danger]

* Ensure that column names are quoted.  Closes #10134 [wesley.moxam]

* Smattering of grammatical fixes to documentation. Closes #10083 [BobSilva]

* Enhance explanation with more examples for attr_accessible macro. Closes #8095 [fearoffish, Marcel Molina]

* Update association/method mapping table to refected latest collection methods for has_many :through. Closes #8772 [lifofifo]

* Explain semantics of having several different AR instances in a transaction block. Closes #9036 [jacobat, Marcel Molina]

* Update Schema documentation to use updated sexy migration notation. Closes #10086 [sjgman9]

* Make fixtures work with the new test subclasses. [tarmo, Koz]

* Introduce finder :joins with associations. Same :include syntax but with inner rather than outer joins.  #10012 [RubyRedRick]
    # Find users with an avatar
    User.find(:all, :joins => :avatar)

    # Find posts with a high-rated comment.
    Post.find(:all, :joins => :comments, :conditions => 'comments.rating > 3')

* Associations: speedup duplicate record check.  #10011 [lifofifo]

* Make sure that << works on has_many associations on unsaved records.  Closes #9989 [hasmanyjosh]

* Allow association redefinition in subclasses.  #9346 [wildchild]

* Fix has_many :through delete with custom foreign keys.  #6466 [naffis]

* Foxy fixtures, from rathole (http://svn.geeksomnia.com/rathole/trunk/README)
    - stable, autogenerated IDs
    - specify associations (belongs_to, has_one, has_many) by label, not ID
    - specify HABTM associations as inline lists
    - autofill timestamp columns
    - support YAML defaults
    - fixture label interpolation