@@ -10,6 +10,10 @@ class LockWithCustomColumnWithoutDefault < ActiveRecord::Base
   set_locking_column :custom_lock_version
 end
 
+class ReadonlyFirstNamePerson < Person
+  attr_readonly :first_name
+end
+
 class OptimisticLockingTest < Test::Unit::TestCase
   fixtures :people, :legacy_things
 
@@ -92,6 +96,18 @@ class OptimisticLockingTest < Test::Unit::TestCase
   def test_lock_with_custom_column_without_default_sets_version_to_zero
     t1 = LockWithCustomColumnWithoutDefault.new
     assert_equal 0, t1.custom_lock_version
+  end
+
+  def test_readonly_attributes
+    assert_equal [ :first_name ], ReadonlyFirstNamePerson.readonly_attributes
+
+    p = ReadonlyFirstNamePerson.create(:first_name => "unchangeable name")
+    p.reload
+    assert_equal "unchangeable name", p.first_name
+
+    p.update_attributes(:first_name => "changed name")
+    p.reload
+    assert_equal "unchangeable name", p.first_name
   end
 
   { :lock_version => Person, :custom_lock_version => LegacyThing }.each do |name, model|
